syntax = "proto3";

package pb;

message LoginReq {
  string email = 1;
  string password = 2;
}

message RegisterReq {
  string email = 1;
  string password = 2;
}

message LoginRes {}

message RegisterRes {}

service Auth {
  rpc Register(RegisterReq) returns (RegisterRes);
  rpc Login (LoginReq) returns (LoginRes);
}
